# kortreist

./: .env  .gitignore  constants.py  endpoints.py  features.py  main.py  models.py  notebook.ipynb  pyproject.toml  show_results.ipynb  utils.py
.ipynb_checkpoints/: features-checkpoint.py  notebook-checkpoint.ipynb
